web/src/components/landing-hero.module.css
.hero {
  display: flex;
  justify-content: space-evenly;
  background: var(--color-white);
  color: var(--color-black);
  padding: 2rem;
  border-radius: 5px;
}

.root {
  width: 100%;
  padding: 5px;
  position: relative;
  border-radius: 10px;
  background: linear-gradient(
    to right,
    hsla(45, 99%, 62%, 1) 0%,
    hsla(45, 99%, 62%, 0.99) 10%,
    hsla(273, 59%, 34%, 0.95) 88%,
    hsla(273, 59%, 34%, 0.94) 100%
  );
}

